Checking in working implementation of GRAM SSH proxy with cleanup.py fixes

--- a/src/gram/am/gram/Makefile
+++ b/src/gram/am/gram/Makefile
@@ -1,13 +1,16 @@
 CC=gcc
 CFLAGS=-I.
 
+INSTALL_DIR=/usr/local/bin
+
 OBJ = gram_ssh_proxy.o
 
 %.o: %.c $(CC) -c -o $@ $< $(CFLAGS)
 
 gram_ssh_proxy: $(OBJ)
 	gcc -o $@ $^ $(CFLAGS)
-	chmod u+s gram_ssh_proxy
+	cp $@ $(INSTALL_DIR)
+	chmod u+s $(INSTALL_DIR)/$@
 
 .PHONY: clean
 
