--- a/src/services/gram-ch.conf
+++ b/src/services/gram-ch.conf
@@ -10,5 +10,5 @@ pre-start script
     mkdir -p -m0755 /var/run/gram-ch
 end script
 
-exec su -s /bin/sh -c "exec python /home/gram/gcf-ch.py" gram 
+exec su -s /bin/sh -c "exec python /opt/gcf/src/gcf-ch.py" gram 
 
