Add vmoc services and copyrights

--- a/src/services/gram-ctrl.conf
+++ b/src/services/gram-ctrl.conf
@@ -20,7 +20,7 @@
 # OUT OF OR IN CONNECTION WITH THE WORK OR THE USE OR OTHER DEALINGS
 # IN THE WORK.
 #----------------------------------------------------------------------
-description "GRAM Compute Node Interface"
+description "GRAM Default Controller Service"
 author "Jeanne Ohren <johren@bbn.com>"
 
 start on runlevel [2345]
@@ -28,9 +28,10 @@ stop on runlevel [016]
 
 
 pre-start script
-
-    mkdir -p -m0755 /var/run/gram-cns
+    mkdir -p -m0755 /var/run/gram-ctrl
 end script
 
-exec su -s /bin/sh -c "exec python /opt/gram/am/gram/compute_node_interface.py" root 
+env PYTHONPATH=/opt/gcf/src:/home/gram/gram/src
+
+exec start-stop-daemon --start --chuid gram --exec /opt/pox/pox.py -- --no-cli log.level --DEBUG openflow.of_01 --port=9000 forwarding.l2_learning  
 
