--- a/src/services/gram-am.conf
+++ b/src/services/gram-am.conf
@@ -1,3 +1,25 @@
+#----------------------------------------------------------------------
+# Copyright (c) 2013 Raytheon BBN Technologies
+#
+# Permission is hereby granted, free of charge, to any person obtaining
+# a copy of this software and/or hardware specification (the "Work") to
+# deal in the Work without restriction, including without limitation the
+# rights to use, copy, modify, merge, publish, distribute, sublicense,
+# and/or sell copies of the Work, and to permit persons to whom the Work
+# is furnished to do so, subject to the following conditions:
+#
+# The above copyright notice and this permission notice shall be
+# included in all copies or substantial portions of the Work.
+#
+# THE WORK IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
+# OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+# HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+# WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE WORK OR THE USE OR OTHER DEALINGS
+# IN THE WORK.
+#----------------------------------------------------------------------
 description "GRAM Aggregate Manager Service"
 author "Jeanne Ohren <johren@bbn.com>"
 
@@ -10,5 +32,7 @@ pre-start script
     mkdir -p -m0755 /var/run/gram-am
 end script
 
-exec su -s /bin/sh -c "exec python /home/gram/gram/src/gcf-am.py" gram 
+env PYTHONPATH=/opt/gcf/src:/home/gram/gram/src
+
+exec su -s /bin/sh -c "exec python /home/gram/gram/src/gram-am.py" gram 
 
