--- a/src/services/gram-vmoc.conf
+++ b/src/services/gram-vmoc.conf
@@ -20,7 +20,7 @@
 # OUT OF OR IN CONNECTION WITH THE WORK OR THE USE OR OTHER DEALINGS
 # IN THE WORK.
 #----------------------------------------------------------------------
-description "GRAM Compute Node Interface"
+description "GRAM VMOC Service"
 author "Jeanne Ohren <johren@bbn.com>"
 
 start on runlevel [2345]
@@ -28,9 +28,10 @@ stop on runlevel [016]
 
 
 pre-start script
-
-    mkdir -p -m0755 /var/run/gram-cns
+    mkdir -p -m0755 /var/run/gram-vmoc
 end script
 
-exec su -s /bin/sh -c "exec python /opt/gram/am/gram/compute_node_interface.py" root 
+env PYTHONPATH=/opt/gcf/src:/home/gram/gram/src
+
+exec start-stop-daemon --start --chuid gram --exec /opt/pox/pox.py -- --no-cli log.level --DEBUG vmoc.VMOC --management_port=7001 --default_controller_url=https://localhost:9000 
 
