--- a/src/services/gram-vmoc.conf
+++ b/src/services/gram-vmoc.conf
@@ -33,5 +33,6 @@ end script
 
 env PYTHONPATH=/opt/gcf/src:/home/gram/gram/src
 
-exec start-stop-daemon --start --chuid gram --exec /opt/pox/pox.py -- --no-cli log.level --DEBUG vmoc.VMOC --management_port=7001 --default_controller_url=https://localhost:9000 
+#exec start-stop-daemon --start --chuid gram --exec /opt/pox/pox.py -- --no-cli log.level --DEBUG vmoc.VMOC --management_port=7001 --default_controller_url=https://localhost:9000 
+exec start-stop-daemon --start --chuid gram --exec /opt/pox/pox.py -- log.level --DEBUG vmoc.VMOC --management_port=7001 --default_controller_url=https://localhost:9000 
 
