Add env variables to conf files for gram-am and gram-amv2

--- a/src/services/gram-amv2.conf
+++ b/src/services/gram-amv2.conf
@@ -20,8 +20,8 @@
 # OUT OF OR IN CONNECTION WITH THE WORK OR THE USE OR OTHER DEALINGS
 # IN THE WORK.
 #----------------------------------------------------------------------
-description "GRAM Aggregate Manager Service"
-author "Jeanne Ohren <johren@bbn.com>"
+description "GRAM Aggregate Manager V2 Service"
+author "Marshall Brinn <mbrinn@bbn.com>"
 
 start on runlevel [2345]
 stop on runlevel [016]
@@ -29,7 +29,7 @@ stop on runlevel [016]
 
 pre-start script
 
-    mkdir -p -m0755 /var/run/gram-am
+    mkdir -p -m0755 /var/run/gram-amv2
 end script
 
 env PYTHONPATH=/opt/gcf/src:/home/gram/gram/src
@@ -42,5 +42,5 @@ env SERVICE_ENDPOINT="http://localhost:35357/v2.0"
 env SERVICE_TOKEN=pridev
 env OS_NO_CACHE=1
 
-exec su -s /bin/sh -c "exec python /home/gram/gram/src/gram-am.py" gram 
+exec su -s /bin/sh -c "exec python /home/gram/gram/src/gram-am.py -V2 -p 8002" gram 
 
