Use vmoc.l2_simple_learning as default controller
Former-commit-id: 2e983ab0f97d7776eef43158d4b51aeb40f27d4e

--- a/src/services/gram-ctrl.conf
+++ b/src/services/gram-ctrl.conf
@@ -35,5 +35,7 @@ env PYTHONPATH=/opt/gcf/src:/home/gram/gram/src
 
 #exec start-stop-daemon --start --chuid gram --exec /opt/pox/pox.py -- --no-cli log.level --DEBUG openflow.of_01 --port=9000 forwarding.l2_learning  
 
-exec start-stop-daemon --start --chuid gram --exec /opt/pox/pox.py -- log.level --DEBUG openflow.of_01 --port=9000 forwarding.l2_learning  
+#exec start-stop-daemon --start --chuid gram --exec /opt/pox/pox.py -- log.level --DEBUG openflow.of_01 --port=9000 forwarding.l2_learning  
+
+exec start-stop-daemon --start --chuid gram --exec /opt/pox/pox.py -- log.level --DEBUG openflow.of_01 --port=9000 vmoc.l2_simple_learning
 
