Next version of openstack install scripting
Former-commit-id: c0ecada424bc26aa09d7b1ab52695ef7e951ca0e

--- a/src/install/openstack.conf
+++ b/src/install/openstack.conf
@@ -5,17 +5,24 @@
 	"CONTROL_ADDRESS": "10.10.8.100", 
 	"CONTROL_INTERFACE": "eth1", 
 	"CONTROL_NETMASK": "255.255.255.0", 
-	"MYSQL_USER": "nova_user", 
+	"MYSQL_USER": "admin", 
 	"MYSQL_PASSWORD": "mysql_pwd", 
 	"RABBIT_PASSWORD": "rabbit_pwd", 
 	"NOVA_PASSWORD": "nova_pwd", 
 	"GLANCE_PASSWORD": "glance_pwd", 
 	"KEYSTONE_PASSWORD": "keystone_pwd", 
 	"QUANTUM_PASSWORD": "quantum_pwd", 
-	"OS_TENANT_NAME": "mytenant", 
+	"OS_TENANT_NAME": "admin", 
 	"OS_USERNAME": "admin", 
 	"OS_PASSWORD": "os_pwd", 
-	"OS_AUTH_URL": "https://localhost:6363"
+	"OS_AUTH_URL": "http://localhost:5000/v2.0/",
+	"OS_NO_CACHE" : "1",
+	"OS_ADMIN_TOKEN" : "bos",
+	"CONTROLLER_HOST" : "boscontroller",
+	"COMPUTE_HOSTS": {
+	    "boscompute1": "10.10.8.101", 
+	    "boscompute2": "10.10.8.102", 
+	    "boscompute4": "10.10.8.104"}
 }
 
 
