Latest version with mostly working Keystone
Former-commit-id: 9bec738d5b5918027d7d7e890c894a72eb42e30c

--- a/src/install/openstack.conf
+++ b/src/install/openstack.conf
@@ -16,8 +16,10 @@
 	"OS_USERNAME": "admin", 
 	"OS_PASSWORD": "os_pwd", 
 	"OS_AUTH_URL": "http://localhost:5000/v2.0/",
+	"OS_REGION_NAME" : "RegionOne", 
 	"OS_NO_CACHE" : "1",
-	"OS_ADMIN_TOKEN" : "bos",
+	"SERVICE_TOKEN" : "bos",
+	"SERVICE_ENDPOINT" : "http://localhost:35357/v2.0",
 	"CONTROLLER_HOST" : "boscontroller",
 	"COMPUTE_HOSTS": {
 	    "boscompute1": "10.10.8.101", 
