Latest fixes to automated install scripts
Former-commit-id: a2f724e36d10a3bbe5df59aad5de02051e8f8244

--- a/src/install/openstack.conf
+++ b/src/install/openstack.conf
@@ -24,7 +24,15 @@
 	"COMPUTE_HOSTS": {
 	    "boscompute1": "10.10.8.101", 
 	    "boscompute2": "10.10.8.102", 
-	    "boscompute4": "10.10.8.104"}
+	    "boscompute4": "10.10.8.104"},
+	"GLANCE_IMAGES" : 
+	    [
+		{
+		"name": "Ubuntu 12.04 UEC", 
+	    	"url": "http://uec-images.ubuntu.com/releases/precise/release/ubuntu-12.04-server-cloudimg-amd64.tar.gz",
+		"image_file" : "precise-server-cloudimg-amd64.img"
+		}
+	    ]	
 }
 
 
