Support one-deep backup/restore of config files
Former-commit-id: 3d5acd4c8327b9c8930d00bb66aab46c51f96345

--- a/src/install/openstack.conf
+++ b/src/install/openstack.conf
@@ -20,6 +20,7 @@
 	"OS_NO_CACHE" : "1",
 	"SERVICE_TOKEN" : "bos",
 	"SERVICE_ENDPOINT" : "http://localhost:35357/v2.0",
+	"BACKUP_DIRECTORY" : "/home/gram/.backup",
 	"CONTROLLER_HOST" : "boscontroller",
 	"COMPUTE_HOSTS": {
 	    "boscompute1": "10.10.8.101", 
