Insert Nova module for compute node
Former-commit-id: 12486d8d150421516f362135403af57ace85b736

--- a/src/install/openstack.conf
+++ b/src/install/openstack.conf
@@ -30,7 +30,7 @@
 	    [
 		{
 		"name": "Ubuntu 12.04 UEC", 
-	    	"url": "http://uec-images.ubuntu.com/releases/precise/release/ubuntu-12.04-server-cloudimg-amd64.tar.gz",
+	    	"url": "http://cloud-images.ubuntu.com/releases/precise/release-20120424/ubuntu-12.04-server-cloudimg-amd64.tar.gz",
 		"image_file" : "precise-server-cloudimg-amd64.img"
 		}
 	    ]	
