Complete Quantun compute install class
Former-commit-id: 4eb675db821f5f2b9ae428ab10939f860354aa1b

--- a/src/install/openstack.conf
+++ b/src/install/openstack.conf
@@ -20,6 +20,12 @@
 	"OS_NO_CACHE" : "1",
 	"SERVICE_TOKEN" : "bos",
 	"SERVICE_ENDPOINT" : "http://localhost:35357/v2.0",
+
+	"PUBLIC_GATEWAY_IP" : "128.89.91.162",
+	"PUBLIC_SUBNET_CIDR" : "128.89.80.0/27",
+	"PUBLIC_SUBNET_START_IP" : "128.89.91.180",
+	"PUBLIC_SUBNET_END_IP" : "128.89.91.189",
+
 	"BACKUP_DIRECTORY" : "/home/gram/.backup",
 	"CONTROLLER_HOST" : "boscontroller",
 	"COMPUTE_HOSTS": {
