Add Hypervisor support and controller/compute differentiation
Former-commit-id: 04b9b105eadb27f3348b146518a443f9af58fc2c

--- a/src/install/openstack.conf
+++ b/src/install/openstack.conf
@@ -1,10 +1,11 @@
 {
-	"MANAGEMENT_INTERFACE": "eth0", 
-	"MANAGEMENT_ADDRESS": "128.89.15.100", 
-	"MANAGEMENT_NETMASK": "255.255.255.254", 
+	"MANAGEMENT_INTERFACE": "eth2", 
+	"MANAGEMENT_ADDRESS": "128.89.91.170", 
+	"MANAGEMENT_NETMASK": "255.255.255.224", 
 	"CONTROL_ADDRESS": "10.10.8.100", 
-	"CONTROL_INTERFACE": "eth1", 
+	"CONTROL_INTERFACE": "eth0", 
 	"CONTROL_NETMASK": "255.255.255.0", 
+	"DATA_INTERFACE": "eth1", 
 	"MYSQL_USER": "admin", 
 	"MYSQL_PASSWORD": "mysql_pwd", 
 	"RABBIT_PASSWORD": "rabbit_pwd", 
@@ -22,7 +23,7 @@
 	"SERVICE_ENDPOINT" : "http://localhost:35357/v2.0",
 
 	"PUBLIC_GATEWAY_IP" : "128.89.91.162",
-	"PUBLIC_SUBNET_CIDR" : "128.89.80.0/27",
+	"PUBLIC_SUBNET_CIDR" : "128.89.91.160/27",
 	"PUBLIC_SUBNET_START_IP" : "128.89.91.180",
 	"PUBLIC_SUBNET_END_IP" : "128.89.91.189",
 
