Add metadata port and address to l3-agent.ini
Former-commit-id: aa3233035e2be06647ece8aafb6451bc31434d7b

--- a/src/install/openstack.conf
+++ b/src/install/openstack.conf
@@ -27,6 +27,8 @@
 	"PUBLIC_SUBNET_START_IP" : "128.89.91.163",
 	"PUBLIC_SUBNET_END_IP" : "128.89.91.169",
 
+	"METADATA_PORT" : "8775",
+
 	"BACKUP_DIRECTORY" : "/home/gram/.backup",
 	"CONTROLLER_HOST" : "boscontroller",
 	"COMPUTE_HOSTS": {
