adding code to edit /etc/hosts with addresses and hostnames for omni to work properly
Former-commit-id: 0cb80a3913843788293aa3d13d90ed9873300cfc

--- a/src/gram/am/gram/config.json
+++ b/src/gram/am/gram/config.json
@@ -58,6 +58,7 @@
    "control_host" : null,
    "control_host_addr" : null,
    "compute_hosts": null,
+   "host_file_entries": null,
    "glance_images" : [] 
 
 }
