--- a/src/gram/am/gram/config.json
+++ b/src/gram/am/gram/config.json
@@ -59,6 +59,7 @@
    "control_host_addr" : null,
    "compute_hosts": null,
    "host_file_entries": null,
-   "glance_images" : [] 
+   "glance_images" : [],
+   "mgmt_addr" : null 
 
 }
