Add stitching advertisement rspecs to listresources of AM
Former-commit-id: 42ff24610351187d72fc3f09e7992c1edeecf8c1

--- a/src/gram/am/gram/config.json
+++ b/src/gram/am/gram/config.json
@@ -60,6 +60,7 @@
    "compute_hosts": null,
    "host_file_entries": null,
    "glance_images" : [],
-   "mgmt_addr" : null 
+   "mgmt_addr" : null,
+   "stitching_info" : null
 
 }
