fixed typo in var name
Former-commit-id: a16893f3a42ecc1d3c7f48a5befedbcac2a37cfb

--- a/src/gram/am/gram/config.json
+++ b/src/gram/am/gram/config.json
@@ -67,6 +67,6 @@
    "compute_hosts": null,
    "host_file_entries": null,
    "glance_images" : [],
-   "mgmt_addr" : null 
+   "mgmt_ns" : null 
 
 }
