cannot have a module and a directory of the same name in python
Former-commit-id: e9bc6704dc33e8b6f075a69810ec4be919c40cc7

--- a/src/services/gram-mon.conf
+++ b/src/services/gram-mon.conf
@@ -30,8 +30,8 @@ pre-start script
     mkdir -p -m0755 /var/run/gram-mon
 end script
 
-env PYTHONPATH=/opt/gcf/src:/home/gram/gram/src:/home/gram/gram/src/gram/am/gram
+env PYTHONPATH=/opt/gcf/src:/home/gram/gram/src
 
-exec su -s /bin/sh -c "exec python /home/gram/gram/src/gmoc/gram-mon.py" gram
+exec su -s /bin/sh -c "exec python /home/gram/gram/src/monitor/gram-mon.py" gram
 
 
