--- a/src/services/gram-mon.conf
+++ b/src/services/gram-mon.conf
@@ -20,7 +20,7 @@
 # OUT OF OR IN CONNECTION WITH THE WORK OR THE USE OR OTHER DEALINGS
 # IN THE WORK.
 #----------------------------------------------------------------------
-description "GRAM Default Controller Service"
+description "GRAM Monitoring Service"
 
 start on runlevel [2345]
 stop on runlevel [016]
@@ -33,5 +33,4 @@ end script
 env PYTHONPATH=/opt/gcf/src:/home/gram/gram/src
 
 exec su -s /bin/sh -c "exec python /home/gram/gram/src/monitor/gram-mon.py" gram
-
 
