--- a/pkg/gram_dpkg/DEBIAN_compute/control
+++ b/pkg/gram_dpkg/DEBIAN_compute/control
@@ -2,6 +2,6 @@ Package: gram
 Version: 0.1
 Priority: optional
 Architecture: all
-Depends: git, cloud-utils, kvm, xmlsec1, libvirt-bin, pm-utils, nova-api-metadata, nova-compute-kvm, guestmount, quantum-plugin-openvswitch-agent, openvswitch-switch, python-software-properties, ntp, module-assistant
+Depends: git,module-assistant, ntp, vlan, bridge-utils, cpu-checker, kvm, libvirt-bin, pm-utils, openvswitch-switch, openvswitch-datapath-dkms, quantum-plugin-openvswitch-agent, nova-compute-kvm 
 Maintainer: GRAM Developers <gram-dev@bbn.com>
 Description: GRAM installation package
