--- a/pkg/gram_dpkg/DEBIAN_control/control
+++ b/pkg/gram_dpkg/DEBIAN_control/control
@@ -2,6 +2,6 @@ Package: gram
 Version: 0.1
 Priority: optional
 Architecture: all
-Depends: git, cloud-utils, kvm, xmlsec1, python-software-properties, ubuntu-cloud-keyring, ntp, mysql-server, python-mysqldb, rabbitmq-server, keystone, python-keystone, python-keystoneclient, glance, glance-api, python-glanceclient, glance-common, nova-api, nova-cert, nova-common, nova-scheduler, python-nova, python-novaclient, nova-consoleauth, novnc, nova-novncproxy, openvswitch-switch, quantum-server, python-cliff, quantum-plugin-openvswitch-agent, quantum-l3-agent, quantum-dhcp-agent, python-pyparsing, module-assistant
+Depends: git, module-assistant, cloud-init, xmlsec1,ntp, vlan, bridge-utils, rabbitmq-server, keystone, glance, quantum-server, nova-api, nova-cert, novnc, nova-consoleauth, nova-scheduler, nova-novncproxy, nova-doc, nova-conductor, cinder-api, cinder-scheduler, cinder-volume, iscsitarget, open-iscsi, iscsitarget-dkms, openstack-dashboard, memcached, openvswitch-switch, openvswitch-datapath-dkms,quantum-plugin-openvswitch-agent, quantum-dhcp-agent, quantum-l3-agent, quantum-metadata-agent
 Maintainer: GRAM Developers <gram-dev@bbn.com>
 Description: GRAM installation package
