Updated the stitching info
Former-commit-id: 31826642b7c3724640925e8fc908dee3226f897d

--- a/configs/clemson-control-1/config.json
+++ b/configs/clemson-control-1/config.json
@@ -86,7 +86,8 @@
         "edge_points" : [
                 {
                 "local_switch" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+node+procurve2",
-                "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+interface+procurve2:16",
+                "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+stitchport+procurve2:16",
+                "local_link" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+interface+procurve2:16",
                 "remote_switch": "urn:publicid:IDN+ion.internet2.edu+interface+rtr.atla:xe-0/3/0:clemson-gr",
                 "vlans" : "3000-3020",
                 "traffic_engineering_metric" : "22",
