Add timestamps to VMOC and CTRL logs
Former-commit-id: e3550dab85c24f6510c685c0be72def4240ae12c

--- a/src/services/gram-vmoc.conf
+++ b/src/services/gram-vmoc.conf
@@ -34,5 +34,5 @@ end script
 env PYTHONPATH=/opt/gcf/src:/home/gram/gram/src
 
 #exec start-stop-daemon --start --chuid gram --exec /opt/pox/pox.py -- --no-cli log.level --DEBUG vmoc.VMOC --management_port=7001 --default_controller_url=https://localhost:9000 
-exec start-stop-daemon --start --chuid gram --exec /opt/pox/pox.py -- log.level --DEBUG vmoc.VMOC --management_port=7001 --default_controller_url=https://localhost:9000 
+exec start-stop-daemon --start --chuid gram --exec /opt/pox/pox.py -- log --format="%(asctime)s: %(message)s" log.level --DEBUG vmoc.VMOC --management_port=7001 --default_controller_url=https://localhost:9000 
 
