Add stitch points for VLAN 4083, 4084, 4085, 4087
Former-commit-id: 0c01aabd6c01d6a62a13ac5cabe12fe87a8718b4

--- a/configs/clemson-control-1/config.json
+++ b/configs/clemson-control-1/config.json
@@ -99,10 +99,62 @@
         "edge_points" : [
 		{
                 "local_switch" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+node+procurve2_760",
-                "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+stitchport+procurve2:12",
-                "local_link" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+interface+procurve2:12",
+                "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+stitchport+procurve2_760:12",
+                "local_link" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+interface+procurve2_760:12",
                 "remote_switch": "urn:publicid:IDN+wimax.clemson.edu+interface+foobar",
                 "vlans" : "760",
+                "traffic_engineering_metric" : "22",
+                "capacity": "1000000",
+                "stitching_granularity":"1",
+                "maximum_reservable_capacity": "1000000",
+                "minimum_reservable_capacity": "1000",
+                "interface_mtu": "1500"
+                },
+		{
+                "local_switch" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+node+procurve2_4083",
+                "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+stitchport+procurve2_4083:3",
+                "local_link" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+interface+procurve2_4083:3",
+                "remote_switch": "urn:publicid:IDN+wimax.clemson.edu+interface+foobar",
+                "vlans" : "4083",
+                "traffic_engineering_metric" : "22",
+                "capacity": "1000000",
+                "stitching_granularity":"1",
+                "maximum_reservable_capacity": "1000000",
+                "minimum_reservable_capacity": "1000",
+                "interface_mtu": "1500"
+                },
+		{
+                "local_switch" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+node+procurve2_4084",
+                "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+stitchport+procurve2_4084:3",
+                "local_link" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+interface+procurve2_4084:3",
+                "remote_switch": "urn:publicid:IDN+wimax.clemson.edu+interface+foobar",
+                "vlans" : "4084",
+                "traffic_engineering_metric" : "22",
+                "capacity": "1000000",
+                "stitching_granularity":"1",
+                "maximum_reservable_capacity": "1000000",
+                "minimum_reservable_capacity": "1000",
+                "interface_mtu": "1500"
+                },
+		{
+                "local_switch" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+node+procurve2_4085",
+                "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+stitchport+procurve2_4085:3",
+                "local_link" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+interface+procurve2_4085:3",
+                "remote_switch": "urn:publicid:IDN+wimax.clemson.edu+interface+foobar",
+                "vlans" : "4085",
+                "traffic_engineering_metric" : "22",
+                "capacity": "1000000",
+                "stitching_granularity":"1",
+                "maximum_reservable_capacity": "1000000",
+                "minimum_reservable_capacity": "1000",
+                "interface_mtu": "1500"
+                },
+		{
+                "local_switch" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+node+procurve2_4087",
+                "port" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+stitchport+procurve2_4087:3",
+                "local_link" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+interface+procurve2_4087:3",
+                "remote_switch": "urn:publicid:IDN+wimax.clemson.edu+interface+foobar",
+                "vlans" : "4087",
                 "traffic_engineering_metric" : "22",
                 "capacity": "1000000",
                 "stitching_granularity":"1",
