Use FQDN and not IP address for HREF, also catch errors in loop and retry next time
Former-commit-id: 7aa756a884a592aa76fce4f6ea21aa157feed1a9

--- a/configs/clemson-control-1/opsmon_config.json
+++ b/configs/clemson-control-1/opsmon_config.json
@@ -1,5 +1,5 @@
 {
-	"base_address" : "https://130.127.88.98",
+	"base_address" : "https://clemson-clemson-control-1.clemson.edu",
 	"aggregate_id" : "gram-clemson",
 	"aggregate_urn" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+authority+am",
 	"frequency_sec" : "60",
