--- a/configs/bbn-cam-ctrl-1/config.json
+++ b/configs/bbn-cam-ctrl-1/config.json
@@ -93,7 +93,7 @@
                 "local_switch" : "urn:publicid:IDN+bbn-cam-ctrl-1.gpolab.bbn.com+node+procurve2",
                 "port" : "urn:publicid:IDN+bbn-cam-ctrl-1.gpolab.bbn.com+stitchport+procurve2:3",
 		"local_link" : "urn:publicid:IDN+bbn-cam-ctrl-1.gpolab.bbn.com+interface+procurve2:3",
-                "remote_switch": "urn:publicid:IDN+calcontroller.gram.gpolab.bbn.com+node+procurve2",
+                "remote_switch": "urn:publicid:IDN+ion.internet2.edu+interface+rtr.newy:ae0:gpo-og",
                 "vlans" : "2611-2630",
                 "traffic_engineering_metric" : "22",
                 "capacity": "2500000",
@@ -107,3 +107,6 @@
    "public_ip": "192.1.243.5",
    "mgmt_ns": "qrouter-b7304f58-b78c-4677-acee-633d14c503ec"
 }
+
+   
+
