Change name of Clemson from gram-clemson to clemson-og
Former-commit-id: 964711395f3adc4e9da00509c2c28229f6fa6bbe

--- a/configs/clemson-control-1/opsmon_config.json
+++ b/configs/clemson-control-1/opsmon_config.json
@@ -1,6 +1,6 @@
 {
 	"base_address" : "https://clemson-clemson-control-1.clemson.edu",
-	"aggregate_id" : "gram-clemson",
+	"aggregate_id" : "clemson-og",
 	"aggregate_urn" : "urn:publicid:IDN+clemson-clemson-control-1.clemson.edu+authority+am",
 	"frequency_sec" : "60",
 	"window_duration_sec" : "3600",
